--- a/Crowded/app/src/main/res/layout/splash_screen.xml
+++ b/Crowded/app/src/main/res/layout/splash_screen.xml
@@ -6,13 +6,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="A Ginyu Force App"
+        android:text="(A Ginyu Force Project)"
         android:id="@+id/textView"
         android:layout_gravity="bottom"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:textSize="40dp"
-        android:textColor="#ffffff" />
+        android:textSize="35dp"
+        android:textColor="#f5f3f3" />
 
     <ImageView
         android:layout_width="300dp"
