--- a/Crowded/app/src/main/res/layout/login_screen.xml
+++ b/Crowded/app/src/main/res/layout/login_screen.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/krowdedlogo"
         android:id="@+id/imageView2"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="18dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -16,54 +16,34 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/password"
-        android:hint="Password"
-        android:layout_below="@+id/userName"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Username"
+        android:hint="Guest Name"
         android:ems="10"
         android:id="@+id/userName"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/password"
-        android:layout_alignStart="@+id/password" />
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="false" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
         android:id="@+id/button"
-        android:layout_below="@+id/password"
-        android:layout_alignLeft="@+id/password"
-        android:layout_alignStart="@+id/password"
         android:layout_toLeftOf="@+id/sign_in_button"
-        android:layout_toStartOf="@+id/sign_in_button" />
+        android:layout_below="@+id/userName"
+        android:layout_alignLeft="@+id/userName"
+        android:layout_alignStart="@+id/userName"
+        android:background="#ffffff"
+        android:textColor="#ada8a8" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button"
-        android:layout_alignRight="@+id/password"
-        android:layout_alignEnd="@+id/password" />
+        android:layout_below="@+id/userName"
+        android:layout_alignRight="@+id/userName"
+        android:layout_alignEnd="@+id/userName" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Proceed as Guest"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="38dp"
-        android:textColor="#0386cd"
-        android:clickable="false" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -71,6 +51,9 @@
         android:layout_height="wrap_content"
         android:text="SignOut"
         android:id="@+id/signOut"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginBottom="24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="#ffff"
+        android:textColor= "#ada8a8" />
 </RelativeLayout>
