--- a/Crowded/app/src/main/res/layout/login_screen.xml
+++ b/Crowded/app/src/main/res/layout/login_screen.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/krowdedlogo"
-        android:id="@+id/imageView2"
-        android:layout_marginTop="18dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    android:layout_height="match_parent"
+    android:background="#0153A7">
 
     <EditText
         android:layout_width="wrap_content"
@@ -22,19 +13,22 @@
         android:id="@+id/userName"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentEnd="false" />
+        android:layout_alignParentEnd="false"
+        android:textColor="#ffffff"
+        android:textColorHighlight="#ffffff"
+        android:textColorHint="#ffffff" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
         android:id="@+id/button"
         android:layout_toLeftOf="@+id/sign_in_button"
         android:layout_below="@+id/userName"
+        android:background="@drawable/logbutton"
+        android:textColor="#ada8a8"
+        android:layout_alignBottom="@+id/sign_in_button"
         android:layout_alignLeft="@+id/userName"
-        android:layout_alignStart="@+id/userName"
-        android:background="#ffffff"
-        android:textColor="#ada8a8" />
+        android:layout_alignStart="@+id/userName" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
@@ -47,13 +41,22 @@
 
     <Button
         style="?android:attr/buttonStyleSmall"
+        android:layout_width="200px"
+        android:layout_height="100px"
+        android:id="@+id/signOut"
+        android:background="@drawable/signout"
+        android:textColor= "#ada8a8"
+        android:layout_marginBottom="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SignOut"
-        android:id="@+id/signOut"
-        android:layout_marginBottom="24dp"
-        android:layout_alignParentBottom="true"
+        android:id="@+id/imageView2"
+        android:src="@drawable/krowdedtitlewhite"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:background="#ffff"
-        android:textColor= "#ada8a8" />
+        android:layout_marginTop="40dp" />
+
 </RelativeLayout>
